# EcoClean

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  db.sql  manage.py  patch.py  readme.md  requirements.txt
.github/workflows/: main.yml
core/: admin.py  forms.py  models.py  urls.py  views.py
core/migrations/: 0001_initial.py
data/voice_responses/: runtime_response.xml
docs/: API_SCHEMA.md  ARCHITECTURE.md  DATABASE_SCHEMA.md  DEPLOYMENT.md  DESIGN_PATTERNS.md
garbage_collection/: asgi.py  settings.py  urls.py  wsgi.py
infra/IaC/json/: car-bon_infra.json
infra/IaC/yaml/: car-bon_infra.yml
infra/config/: AWS_config_documentation.yml
src/API/: Dockerfile  deploy.sh  pyproject.toml  requirements.txt
src/API/Docs/: API_Documentation.md
src/API/app/: index.py
src/API/app/UI/: ui_app.py
src/API/app/UI/Basic/: index.html
src/API/app/UI/assets/: style.css
src/API/app/data/voice_responses/: runtime_reponse.xml
src/API/app/helpers/: get_version.py
src/API/app/services/: dynamo.py  graph_service.py  secret_manager.py  twilio_service.py  user_service.py
src/UI/: package.json
src/UI/Basic/: index.html
src/UI/old/car-bon-ui/: bun.lockb  (+8 more)
src/UI/react-dynamodb-chart/: package-lock.json  package.json
templates/: base.html  base1.html
templates/core/: admin_creation.html  admin_dashboard.html  landing.html  login.html  register_garbage_admin.html  register_user.html  report_detail.html  submit_report.html  user_dashboard.html
templates/core/email/: admin_credentials.html  report_completed.html  verify_email.html
(+77 files in other folders)
